--- a/project/FE/package.json
+++ b/project/FE/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "angular-ng-autocomplete": "^2.0.1",
     "bootstrap": "^4.5.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
