--- a/project/FE/package.json
+++ b/project/FE/package.json
@@ -25,7 +25,9 @@
     "angular-material": "^1.2.0",
     "angular-ng-autocomplete": "^2.0.1",
     "angular-paginator": "^5.0.1",
+    "angularx-social-login": "^3.2.1",
     "bootstrap": "^4.5.2",
+    "firebase": "^7.13.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "ng2-order-pipe": "^0.1.5",
@@ -34,8 +36,7 @@
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3",
-    "firebase": "^7.13.1"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.5",
