--- a/project/FE/package.json
+++ b/project/FE/package.json
@@ -25,6 +25,7 @@
     "angular-material": "^1.2.0",
     "angular-ng-autocomplete": "^2.0.1",
     "angular-paginator": "^5.0.1",
+    "angularfire2": "^5.4.2",
     "angularx-social-login": "^3.2.1",
     "bootstrap": "^4.5.2",
     "firebase": "^7.20.0",
